# dick_grower_bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  db_test.sh  deploy.sh  docker-compose.yml  entrypoint.sh
.sqlx/: query-0626cf80c43ec64db6f9e8523dd0c21ce572edfbd6bcde5c6ea2e77adb8a4579.json  query-068cc66c45a3c00a3fc6227ca00a323fda5edfdad6ed89a576de57c0865d0d2a.json  query-0d1225762e6b1c8f2789674654527edbbc8d0842d19554c9293e302cc834c5e4.json  query-0f3d0c50a144d8ec3e2f5271414321de7dc53dfc8924ed1016a5a8f930276ec9.json  query-0f52661b514dc55393fd3edb9b4057b45b9e62822157e15213a5c34db5cb3292.json  query-11985bbbb778f1b4bd1b09e341b5992b47920cc8a5fd693dad40deb4959f419f.json  query-149df78b443d01f6c1915eaa3e9a75b5afd34c3be9c0f119d734a37e870e490d.json  query-1628456162714e8044a836717f3530f466bb27feeca18a67b8620cc10800eb6e.json  query-17a4bafb56ad20b5f6fa1f71682f4e7ca44af13f2de661c202201ce8d90792c4.json  query-1ebf7107207f8fe88c749499cc649863ad96c8c80785f777ed4cf47607383899.json  query-29a2286a21dbd850b4ce568205a0482131fe3eeb5b94c7a8ed8ba06c53a83723.json  query-29c6a3f8a9475f2d5ea095933c44c73538566ccdf26c2e8641f11c4304017413.json  query-34c6434ac1cfad42381664c5c50e91804d68d19b7d9e11ed47d7b9801354c435.json  query-35b3d08294aed0037215644e293b7e1f3fba62ab825793ee5acd511dbba9702f.json  query-3befc99643ab4874a9c0e3cc0191269f8f4d539815faae1930ee3835d97bc6c5.json  query-3cd2a576088868130f14074d0de53bdb60485153ed4dda2c8cf61114fdccad48.json  query-409a864463ed93140c1ecde1eb35ecfd39555c7239aae8e8f9b617b2ca358a99.json  (+45 more)
migrations/: 20250305220653_initial.sql  (+6 more)
src/: main.rs  (+3 more)
(+18 files in other folders)
