[package]
name = "dick_grower_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", default-features = false, features = ["tls-rustls", "runtime-tokio", "postgres", "chrono", "macros" ] }
rand = "0.9"
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
